--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Tracker - Rastreamento de Encomendas" />
+    <meta name="description" content="Tracker - Package Tracking" />
     <meta name="theme-color" content="#0F0F0F" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet" />
-    <title>Tracker - Rastreamento de Encomendas</title>
+    <title>Tracker - Package Tracking</title>
     <style>
       body {
         background-color: #0F0F0F;
